--- a/style.css
+++ b/style.css
@@ -101,7 +101,17 @@ p:not(.boxP){
     position: relative; 
     margin-bottom: -20px; 
 }
-
+.img-container img {
+    width: 50%; 
+    border-radius: 8px; 
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1); 
+}
+.img-container img:last-child {
+    position: absolute; 
+    top: 120px; 
+    left: 110px;
+    z-index: 1; 
+}
 .right-column {
     width: 48%; 
 
